# 123pan-open

./: .gitignore  .pylintrc  123pan.pro  123pan.py  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  resource_build.bat
.github/workflows/: build.yaml  test.yaml
.planning/: PROJECT.md  ROADMAP.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/04-qr-login/: 04-01-PLAN.md  04-02-PLAN.md
app/common/: 123pan_api.py  config.py  log.py  resource.py
app/view/: file_interface.py  main_window.py  setting_interface.py  transfer_interface.py
doc/: api.md  api_web.md  todo.md
script/: build.sh  lint.sh  mypy.sh
src/: 123pan.py  build.sh  requirements.txt  resource_build.bat  resource_build.sh
src/app/common/: api.py  concurrency.py  config.py  const.py  credential_store.py  database.py  download_metadata.py  download_resume.py  filename_utils.py  log.py  resource.py  speed_tracker.py  style_sheet.py
src/app/dialog/: rename_dialog.py
src/app/resource/: resource.qrc
src/app/view/: cloud_interface.py  file_interface.py  login_window.py  main_window.py  move_window.py  newfolder_window.py  qr_login_page.py  (+5 more)
tests/: test_concurrency.py  test_config.py  test_download_metadata.py  test_download_resume.py  test_file_interface.py  test_filename_utils.py  test_login_flow.py  test_main_window.py  test_pan_api.py  test_retry.py  test_search_window.py  test_setting_interface.py  test_speed_tracker.py  test_task_manager.py  test_transfer_interface.py  test_utils.py
(+2 files in other folders)
