[project]
name = "123pan-open"
version = "3.0.5"
description = "第三方123云盘客户端，解决了123云盘电脑客户端限制每日1GB自用流量的问题 "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.8.0",
    "PySide6-Fluent-Widgets[full]>=1.11.1",
    "requests>=2.32.5",
    "zstandard>=0.25.0",
    "qrcode>=8.0",
    "Pillow>=11.0.0",
    "keyring>=25.0.0",
]

[project.optional-dependencies]
build = ["nuitka>=4.0.5"]
lint = ["pylint>=4.0.5", "mypy>=1.19.1"]
test = ["pytest>=8.0.0"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
